@@ -1,2 +1,0 @@
-usr/lib/*/libqtkeychain.so.*
-usr/share/qt4
