@@ -1,3 +1,0 @@
-usr/include/qtkeychain
-usr/lib/*/cmake/QtKeychain/*.cmake
-usr/lib/*/libqtkeychain.so
